# svitpc

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.http.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  prometey.mdc  pyproject.toml  requirements.txt
apps/ai/: apps.py  models.py  urls.py  views.py
apps/analytics/: admin.py  admin_views.py  apps.py  context_processors.py  ecommerce.py  feed_urls.py  feeds.py  models.py  urls.py  views.py
apps/api/: apps.py  models.py  urls.py  views.py
apps/bots/: apps.py  urls.py  views.py
apps/cart/: apps.py  cart.py  context_processors.py  models.py  urls.py  views.py
apps/catalog/: admin.py  admin_category_tree.py  apps.py  cache_invalidation.py  category_icons.py  content_translation.py  context_processors.py  cross_sell.py  derived_filters.py  facet_cache.py  filter_dedup.py  gallery.py  home_cache.py  listing_image.py  listing_params.py  models.py  nav.py  pricing.py  product_dedup.py  ru_localization.py  search_index.py  services.py  signals.py  spec_filters.py  tasks.py  translation.py  urls.py  view_counter.py  views.py  widgets.py
apps/chat/: apps.py  models.py  routing.py  urls.py  views.py
apps/checkout/: apps.py  models.py  urls.py  views.py
apps/compare/: apps.py  context_processors.py  models.py  urls.py  views.py
apps/core/: admin.py  admin_mixins.py  apps.py  celery_queue.py  celery_utils.py  context_processors.py  converters.py  debug_i18n_log.py  device.py  glossary_uk_en.py  htmx.py  i18n.py  middleware.py  middleware_debug_i18n.py  models.py  modeltranslation_sync.py  redirect_cache.py  session_middleware.py  store.py  svitik.py  text.py  used_category.py  utils.py  views.py
apps/customers/: admin.py  apps.py  backends.py  forms.py  models.py  redirects.py  urls.py  utils.py  views.py
apps/importer/: apps.py  models.py
apps/integrations/: heavy_sync.py  webhook_urls.py
apps/loyalty/: admin.py  apps.py  coins.py  constants.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
apps/notifications/: admin.py  apps.py  dispatch.py  models.py  phone.py  service.py  tasks.py  turbosms.py  urls.py  views.py
config/: asgi.py  celery.py  celery_beat_schedule.py  urls.py  wsgi.py
scripts/: build_css_bundle.py  fill_en_translations.py  optimize_static_images.py  process_svitik_assets.py
static/: service-worker.js
templates/: 404.html  500.html  base.html
ТЗ/: Повернення.docx  Прейскурант цен .xlsx  ТЗ.docx
(+528 files in other folders)
