[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[project]
name = "svitpc"
version = "0.1.0"
description = "СвітПК — інтернет-магазин комп'ютерної техніки"
requires-python = ">=3.12"
dependencies = [
    # Django core
    "django>=5.1,<5.2",
    "django-environ>=0.11",
    "django-extensions>=3.2",
    # Database
    "psycopg[binary]>=3.2",
    "django-mptt>=0.16",
    "pgvector>=0.3",
    # Caching & tasks
    "redis>=5.2",
    "celery[redis]>=5.4",
    "django-redis>=5.4",
    # Auth & security
    "django-axes>=7.0",
    "django-otp>=1.5",
    "qrcode>=7.4",
    # i18n
    "django-modeltranslation>=0.19",
    # Admin
    "django-unfold>=0.44",
    "django-imagekit>=5.0",
    "Pillow>=11.0",
    # API
    "djangorestframework>=3.15",
    "django-cors-headers>=4.6",
    # HTMX helper
    "django-htmx>=1.21",
    # Forms & content
    "django-ckeditor-5>=0.2",
    # Notifications
    "pywebpush>=2.0",
    "python-telegram-bot>=21.0",
    "aiogram>=3.10",
    # Integrations
    "httpx>=0.27",
    "lxml>=5.3",
    "defusedxml>=0.7",
    # SEO
    "django-meta>=2.4",
    # Utils
    "tqdm>=4.66",
    "factory-boy>=3.3",
    "whitenoise[brotli]>=6.8",
    "argon2-cffi>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "django-stubs[compatible-mypy]>=5.1",
    "djlint>=1.36",
    "bandit>=1.8",
    "ipython>=8.31",
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "responses>=0.25",
]

[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DJ", "T20"]
ignore = ["S101", "DJ001"]
[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501", "N806"]
"*/tests/*.py" = ["S106", "S311"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = false
ignore_missing_imports = true
[tool.django-stubs]
django_settings_module = "config.settings.develop"

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
ignore = "H030,H031"
# H006 — img width/height (removed; enforced)
# H013 — img alt (enforced)
# H019 — no inline style (enforced)
# H011 — no inline event handlers (enforced)
extend_exclude = "templates/admin"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--tb=short -q"
